fix text alignment

--- a/static/css/static.css
+++ b/static/css/static.css
@@ -1536,7 +1536,6 @@ button:focus,
         line-height: 8px;
         margin-bottom: 0px;
         padding-bottom: 5px;
-        text-align: left;
     }
 
     #disclaimer-breakpoint-phone {
